--- a/controle-cliente/Info.plist
+++ b/controle-cliente/Info.plist
@@ -7,7 +7,15 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>csi.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.grafstock.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>icon.png</string>
+		<string>icon-60.png</string>
+		<string>icon-76.png</string>
+		<string>icon-120.png</string>
+		<string>icon-152.png</string>
+	</array>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
